# GOIT-Python_Web-HW-7

./: README.md  my_select.py  pyproject.toml  seed.py
migrations/versions/: fe8e7c21a389_init.py
src/: models.py
